# godot_simulation

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  SConscript  SConstruct  compile.py  conanfile.py  launch_godot.py  setup_deps.py  test_main.cpp  xmake.lua
.xmake/linux/x86_64/cache/: detect  history  package  references  toolchain
aux_gen/: conan_info.sh  configure_and_compile_res.sh  setup_res.sh
conan/: clang10_profile  clang12_profile  gcc_profile
docs/: docker_vulkan_deps_godot
docs/doxygen/: Doxyfile
docs/doxygen/markdown/: connection_to_ros.md  main.md
docs/plantuml/: component_model  flow_robot_scene_generation
godot_proj/: .gitignore  icon.svg.import  project.godot  ros_gui.gd  ros_gui.tscn  test_summit_xl.tscn
scons_out/: temp_file
src/common/: bridge_sim_pub.hpp  bridge_sim_subs.hpp  godot_img_ros.hpp  joint_data.hpp  pub_if.hpp  topic_types.hpp
src/godot_register_types/: godot_ros_register_types.cpp  godot_ros_register_types.hpp
src/godot_urdf_import/: sdf_1_7_structs.py  urdf_parser.py  urdf_parser_structs.py  urdf_python_to_tscn.py  urdf_to_tscn.py
src/grpc_interface/: .gitignore  grpc_godot_helper_macros.hpp  grpc_subprocess_manager.cpp  grpc_subprocess_manager.hpp  joint_control_server_impl.cpp  joint_control_server_impl.hpp  joint_vel_server_impl.cpp  joint_vel_server_impl.hpp  ros1.proto  server_thread_manager.cpp  server_thread_manager.hpp  simple_camera_server_impl.cpp  simple_camera_server_impl.hpp  simple_camera_service.proto
src/grpc_interface/proto/: commonMessages.proto  joint_control_service.proto  joint_vel.proto  ros1.proto  simple_camera_service.proto
src/interfaces/: pub_buffer_if.hpp
src/joint_controller_if/: joint_controller_if.cpp  joint_controller_if.hpp
src/parser/: joint_parser.hpp
src/ros1_nodes/: node_utils.hpp  ros1_pub_node.cpp  ros1_ros_control_joint_vel.cpp
src/ros1_nodes/exception/: exception.hpp
src/ros1_nodes/grpc_clients/: grpc_base_client.cpp  grpc_base_client.hpp  grpc_cilent_image.cpp  grpc_cilent_image.hpp  grpc_client_joint_control.cpp  grpc_client_joint_control.hpp
src/ros2_system/publisher/: ros2_pub_config.hpp
src/ros2_system/subscriber/: ros2_subs_config.hpp
src/ros_gui/: ros_gui.cpp  ros_gui.hpp
src/ros_interface/ros1/: aux_depend_storage.hpp  ros1_pub.hpp  ros1_pub_helper_macros.hpp  ros1_pub_if.hpp  ros1_pub_node.cpp  ros1_subscriber.cpp  ros1_subscriber.hpp  ros1_subscriber_if.hpp
src/ros_interface/ros1/joint_controllers/: generic6_dof_joint_controller.hpp  hinge_joint3D_controller.cpp  hinge_joint3D_controller.hpp  joint_control_manager.cpp  joint_control_manager.hpp  ros1_control_if.hpp
src/ros_interface/ros1/joint_controllers/ros_control_based/: generic6_dof_joint_controller.cpp  generic6_dof_joint_controller.hpp  hinge_joint3D_controller.cpp  hinge_joint3D_controller.hpp  ros1_control_if.hpp  ros1_vel_scalar_hw_if.cpp  ros1_vel_scalar_hw_if.hpp
src/ros_interface/ros1/ros1_system_manager/: grpc_image_to_ros1.cpp  grpc_image_to_ros1.hpp  grpc_joint_control_to_string.cpp  grpc_joint_control_to_string.hpp  ros1_system_manager.cpp  ros1_system_manager.hpp
src/ros_interface/ros2/: ros2_pub.hpp
src/ros_manager/: ros_manager.cpp  ros_manager.hpp
src/ros_system/: ros1_pub_helper_macros.hpp
src/ros_system/godot/: godot_ros_data_parsers.cpp  godot_ros_data_parsers.hpp
src/ros_system/godot/godot_ros_lib/: ros_lib.cpp  ros_lib.hpp
src/ros_system/godot/joint_controllers/: hinge_joint3D_controller.cpp  hinge_joint3D_controller.hpp
src/ros_system/publisher/: bridge_ros_pub.hpp  pub_config.hpp  pub_sim_config.hpp  ros1_pub.hpp
src/ros_system/subscriber/: bridge_sim_subs.hpp  ros1_subscriber.hpp  subs_config.hpp  subs_sim_config.hpp
src/sensor_If/: sensor_if.hpp
src/sensor_if/: sensor_if.hpp
src/utils/: utils.hpp
src/virtual_sensors/: base_sensor.hpp
src/virtual_sensors/camera/: basic_camera.cpp  basic_camera.hpp
test/noetic_ws/: .gitignore  res_catkin_make
test/noetic_ws/src/test_ros_control/: CMakeLists.txt  package.xml
test/noetic_ws/src/test_ros_control/src/: test_ros_control_node.cpp
